- Observer geimplementeerd - Subejct geimplementeerd

--- a/logic/CMakeLists.txt
+++ b/logic/CMakeLists.txt
@@ -10,6 +10,8 @@ set(LOGIC_SOURCES
         src/entities/PacManModel.cpp
         src/world/World.cpp
         src/entities/WallModel.cpp
+        src/patterns/Observer.cpp
+        src/patterns/Subject.cpp
 )
 
 # Header files (IDE support)
@@ -18,6 +20,8 @@ set(LOGIC_HEADERS
         include/logic/entities/PacManModel.h
         include/logic/world/World.h
         include/logic/entities/WallModel.h
+        include/logic/patterns/Observer.h
+        include/logic/patterns/Subject.h
 )
 
 # Create library
