--- a/representation/CMakeLists.txt
+++ b/representation/CMakeLists.txt
@@ -29,6 +29,8 @@ set(REPRESENTATION_SOURCES
         include/representation/Game.h
         src/states/MenuState.cpp
         include/representation/states/MenuState.h
+        src/states/PausedState.cpp
+        include/representation/states/PausedState.h
 )
 
 # Create executable
