- Debug text weg gehaald - Score met decay geimplementeerd

--- a/logic/CMakeLists.txt
+++ b/logic/CMakeLists.txt
@@ -15,6 +15,8 @@ set(LOGIC_SOURCES
         src/utils/Stopwatch.cpp
         src/utils/Random.cpp
         src/entities/CoinModel.cpp
+        src/utils/Score.cpp
+        include/logic/utils/Score.h
 )
 
 # Header files (IDE support)
@@ -29,6 +31,8 @@ set(LOGIC_HEADERS
         include/logic/utils/Stopwatch.h
         include/logic/utils/Random.h
         include/logic/entities/CoinModel.h
+        src/utils/Score.cpp
+        include/logic/utils/Score.h
 )
 
 # Create library
